<resources>
    <string name="app_name">CubeMaster</string>

    <string name="timer">Timer</string>
    <string name="stats">Stats</string>
    <string name="my_puzzles">My Puzzles</string>
    <string name="settings">Settings</string>
    <string name="detail">Times Detail</string>
    <string name="ok">OK</string>
    <string name="restart">Do you want to restart now to apply changes?</string>
    <string name="areyousuredelete">Are you sure you want to delete this puzzle? (This action can\'t be undone)</string>
    <string name="areyousurereset">Are you sure you want to reset this puzzle? You will loose all registered times</string>
    <string name="areyousuredeletepuzzle">Are you sure you want to delete this solve? This action will update all statistics</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="show_detail">Show detail</string>
    <string name="sort_by">Sort by: </string>
    <string name="recent">Recent</string>
    <string name="latest">Latest</string>
    <string name="puzzle_hint">Introduce a name</string>
    <string name="cannot_empty">It cannot be empty</string>
    <string name="already_exists">It already exists</string>
    <string name="add_new">Add new</string>
    <string name="number_of_solves">Number of solves</string>
    <string name="best_time">Best time</string>
    <string name="worst_time">Worst time</string>
    <string name="average">Average</string>
    <string name="current_average_of_5">Current average of 5</string>
    <string name="current_average_of_12">Current average of 12</string>
    <string name="change_theme">Theme</string>
    <string name="coloured_timer">Coloured Timer</string>
    <string name="minutes_beep">Minutes BEEP</string>
    <string name="times_detail">Times detail</string>
    <string name="reset">Reset</string>
    <string name="use">Use</string>
    <string name="press_back_again_to_exit">Press \'Back\' again to Exit</string>
    <string name="delete_last_solve">Delete last solve</string>
    <string name="change_puzzle">Change Puzzle</string>
    <string name="reset_current_puzzle">Reset Current Puzzle</string>
    <string name="time_holding">Freezing time</string>
    <string name="s">s</string>
    <string name="selected">-</string>
    <string name="frtime_info">Freezing time is the time you must hold pressed the timer screen until it becomes green and starts when you release your finger</string>
    <string name="stopwatch_mode">Stopwatch mode</string>
    <string name="stopwatch_info">This mode allows you to pause and resume your chronometer. Recommended for long time puzzles.</string>
    <string name="dot">.</string>
    <string name="twodots">:</string>
    <string name="threedots">…</string>
    <string name="zero">0</string>
    <string name="zero_millis">000</string>
    <string name="rate_us">Wow! You\'ve reached %1$d times you\'ve solved puzzles with this app!\n\nDo you have a minute to rate it? Please tell me how is your experience, your opinion is the only thing I have to improve and continue growing.</string>
    <string name="rate_us_menu">Do you want to rate this app? Your opinion helps a lot!</string>
    <string name="later">Later</string>
    <string name="rate_now">Rate now</string>
    <string name="no_thanks">Never</string>
    <string name="got_it">Got it!</string>
    <string name="info_main_text">Want to know how your timer works?\nLet\'s go!</string>
    <string name="info_sub_text">1. Hold pressed the screen until the timer turns \'Green\'\n\n2. Release to start it\n\n3. Press again to shut it down\n\n4. Enjoy!</string>
    <string name="contact_main_text">Is there something you want to tell us?</string>
    <string name="contact_sub_text">Could you explain a little more?</string>
    <string name="contact_error">I\'ve detected an error!</string>
    <string name="contact_improvement">I\'ve an idea to make this app better!</string>
    <string name="contact_other">Other reasons</string>

    <string name="onboarding_main_text_1">Welcome to CubeMaster!</string>
    <string name="onboarding_sub_text_1">Let\'s take a look at what features it offers to you</string>
    <string name="onboarding_main_text_2">Official WCA scrambling</string>
    <string name="onboarding_sub_text_2">Powered by TNoodle, amazing!</string>
    <string name="onboarding_main_text_3">Statistics</string>
    <string name="onboarding_sub_text_3">Keep track of your progress and improvements, forgot the pencil!</string>
    <string name="onboarding_main_text_4">Classification</string>
    <string name="onboarding_sub_text_4">Choose whatever you want to time. If it doesn\'t exist, create it!</string>
    <string name="onboarding_main_text_5">Customization</string>
    <string name="onboarding_sub_text_5">If you like it, It\'s better and easier</string>
    <string name="onboarding_main_text_6">Enjoy!</string>
    <string name="onboarding_sub_text_6">It\'s the most important thing</string>
    <string name="skip">skip</string>
    <string name="search_title">Search</string>
    <string name="must_be_one_puzzle">There must be at least one puzzle</string>
    <string name="contact_us">Contact us</string>
    <string name="send">send</string>
    <string name="default_notification_channel_id">defaultChannelId</string>
    <string name="timer_settings">Timer</string>
    <string name="customization_settings">Customization</string>
    <string name="scramble_settings">WCA Scramble</string>
    <string name="scramble_length">Length(60 Max)</string>
    <string name="times_chart_name">Times Chart</string>
    <string name="scrambling">Scrambling…</string>
    <string name="last_solve">Last solve: %1$s</string>
    <string name="indicator">Indicator</string>
    <string name="dots">Dots</string>
    <string name="line">Line</string>
    <string name="scape_tutorial">Scape tutorial</string>
    <string name="wait_until_indicator_turns_green">Wait until indicator turns green</string>
    <string name="stop_holding">Stop holding</string>
    <string name="press_to_stop_the_timer">Press to stop the timer</string>
    <string name="well_done_you_finished_the_tutorial">Well done! you finished the tutorial</string>
    <string name="press_the_screen">Press the screen</string>
    <string name="press_the_screen_again_to_resume">Press the save button or the screen again to resume</string>
    <string name="current_average_of_n">Current average of</string>
    <string name="avg_n_example">e.g. 100</string>
    <string name="go_to_details">Times detail</string>
    <string name="select_a_time_in_chart">Select a time in chart!</string>
    <string name="solve_this_puzzle_to_start_seeing_statistics">Solve this puzzle to start seeing statistics!</string>
    <string name="solve_this_puzzle_to_start_seeing_details">Solve this puzzle to start seeing details!</string>
    <string name="do_it">Do it!</string>
    <string name="new_feature_wca_scrambling">Do you want to try the official WCA scrambling? It is a new feature in CubeMaster!</string>
    <string name="inspection_time_text">Inspection Time</string>
    <string name="plus2">+2</string>
    <string name="dnf">DNF</string>
    <string name="press_to_finish_the_inspection">Press to finish the inspection</string>
</resources>