<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/new_puzzle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/puzzle_hint"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_puzzle"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>