<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:textAlignment="center"
            android:spinnerMode="dropdown"
            android:id="@+id/puzzle_name"
            android:scrollbars="vertical"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/accept"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>

    </LinearLayout>

</RelativeLayout>