<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dediegomrt.cubemaster.View.SettingsFragment"
    android:background="@color/default_background_grey">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_beep"
                android:layout_centerVertical="true"
                android:textColor="@color/md_black_1000"
                android:textSize="15sp"/>

            <Switch
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/beep_switch"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:minHeight="50sp"
            android:layout_height="50sp"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:paddingEnd="5sp"
            android:paddingRight="5sp">

            <TextView
                android:id="@+id/frtime_text"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:text="@string/time_holding"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textColor="@color/md_black_1000"
                android:textSize="15sp"/>

            <ImageButton
                android:id="@+id/frtime_info"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/selected"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:background="@drawable/background_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_white_18dp"
                android:layout_toRightOf="@id/frtime_text"
                android:layout_toEndOf="@id/frtime_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/frtime_setter"
                android:layout_toStartOf="@+id/frtime_setter"
                android:textColor="@color/md_black_1000"
                android:textSize="15sp"/>

            <NumberPicker
                android:theme="@style/NumberPickerText"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/frtime_setter"
                android:layout_centerVertical="true"
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frtime_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">

            <TextView
                android:id="@+id/frtime_info_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/frtime_info"
                android:layout_centerVertical="true"
                android:textColor="@color/md_black_1000"
                android:textSize="13sp"/>

        </RelativeLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme"
            android:layout_centerVertical="true"
            android:textColor="@color/md_black_1000"
            android:textSize="15sp"/>

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">

            <GridView
                android:id="@+id/color_gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:numColumns="6"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
